# Rust-Practice

./: Cargo.toml  README.md
rust_coding/stats_calculator/: Cargo.toml
src/: RustInformation.md  RustPractice_01.rs  main.rs  rust_practice_01.rs  rust_practice_02.rs
stats_calculator/: Cargo2.toml
stats_calculator/src/: main.rs
